@startuml
skinparam classAttributeIconSize 0

package "Core" {
    abstract class Command {
        + name: str
        + description: str
        + execute(context: AppContext): void
        + {abstract} _execute(context: AppContext): any
        + {static} get_params(service: Service): List[Parameter]
    }

    abstract class Service {
        + context: AppContext
        + commands: dict
        + register_command(name: str, command_cls: type): void
        + get_command_params(command_name: str): List[Parameter]
        + emit_event(event: Event): void
    }

    class Event {
        + type: EventType
        + data: dict
    }

    enum EventType {
        START
        IDLE
        STEP
        FINISH
        UPDATE
        ERROR
        EXIT
        SERVICE_AVAILABLE
        SERVICE_SELECTED
        COMMAND_AVAILABLE
        SHOW_SERVICES_MENU
        COMMAND_SELECTED
        COMMAND_EXECUTED
        EXECUTE_COMMAND
        EASTER_EGG
        RUN_COMMAND
    }

    class EventDispatcher {
        - _queue: deque
        - _subscribers: list
        + has_events(): bool
        + emit(event: Event): void
        + next_event(): Event
        + subscribe(listener: any): void
        + dispatch(): void
    }

    class Parameter {
        + name: str
        + display_name: str
        + description: str
        + parse: Callable
        + validators: List[Validator]
        + convert(value: str): any
    }

    class ParameterSchema {
        + name: str
        + display_name: str
        + description: str
        + parse_type: any
        + parameter_cls: any
        + validators: List[Validator]
        + with_range(min, max): ParameterSchema
        + build(custom_desc, extra_validators): Parameter
    }

    abstract class Validator {
        + {abstract} __call__(value: any): void
    }
}

package "App" {
    class Application {
        + context: AppContext
        + services: dict
        + running: bool
        + handle_event(event: Event): void
        + register_service(name: str, service: Service): void
        + run_command(command: Command): any
        + run(): void
        + run_with_gui(viewer: any): void
    }

    class AppContext {
        + data: dict
        + events: EventDispatcher
    }
}

package "Modules.MetalCalc" {
    class MetalCalcService {
        + displayed_name: str
        + materials: List[MetalMaterial]
        + get_materials(): str
        + get_materials_count(): int
        + get_material_by_id(idx: int): MetalMaterial
        + calculate_pipe_unfolding(...)
        + calculate_elbow_unfolding(...)
    }

    abstract class CalculateMetalCommand {
        + service: MetalCalcService
        + has_salary: bool
        + material_index: int
    }

    abstract class CalculateMetalRoundCommand {
        + diameter: float
    }

    class GetMaterialsCommand {
        + _execute(context): str
    }

    class CalculatePipeCommand {
        + length: float
        + _execute(context): str
    }

    class CalculateElbowCommand {
        + angle: float
        + segments: int
        + _execute(context): str
    }

    class MetalMaterial <<(D,orchid) dataclass>> {
        + id: int
        + name: str
        + price_per_m2: float
    }

    abstract class Product {
        + diameter_mm: float
        + material: MetalMaterial
        + has_salary: bool
        + {abstract} get_area_m2(): float
        + {abstract} get_salary(): float
        + get_cost(): float
    }

    class Pipe {
        + length_mm: float
    }

    class Elbow {
        + angle_deg: float
        + segments: int
    }
}

package "Modules.About" {
    class AboutService {
        + displayed_name: str
        + get_about_creator(): str
        + get_about_program(): str
    }

    abstract class GetAboutCommand {
        + service: AboutService
    }

    class GetAboutCreatorCommand {
        + _execute(context): str
    }

    class GetAboutProgramCommand {
        + _execute(context): str
    }
}

package "UI" {
    class ConsoleViewer {
        + context: AppContext
        + handle_event(event: Event): void
        + show_service_menu(): void
        + execute_command(...): void
    }

    class TkinterViewer {
        + context: AppContext
        + handle_event(event: Event): void
        + update_gui(): void
    }
}

' Relations
Service <|-- MetalCalcService
Service <|-- AboutService

Command <|-- CalculateMetalCommand
CalculateMetalCommand <|-- CalculateMetalRoundCommand
CalculateMetalRoundCommand <|-- CalculatePipeCommand
CalculateMetalRoundCommand <|-- CalculateElbowCommand
Command <|-- GetMaterialsCommand

Command <|-- GetAboutCommand
GetAboutCommand <|-- GetAboutCreatorCommand
GetAboutCommand <|-- GetAboutProgramCommand

Application o-- AppContext
AppContext o-- EventDispatcher
EventDispatcher o-- Event

Service o-- AppContext
Command ..> AppContext : uses
Application ..> Command : executes

MetalCalcService o-- MetalMaterial
CalculateMetalCommand o-- MetalCalcService
GetAboutCommand o-- AboutService
GetMaterialsCommand o-- MetalCalcService
CalculatePipeCommand o-- MetalCalcService
CalculateElbowCommand o-- MetalCalcService

Product <|-- Pipe
Product <|-- Elbow
Product o-- MetalMaterial

Parameter o-- Validator
ParameterSchema o-- Validator
ParameterSchema ..> Parameter : builds

ConsoleViewer ..> Event : emits/handles
TkinterViewer ..> Event : emits/handles
Application ..> Event : handles

@enduml
